--- a/.github/workflows/build-and-push-nr-server-image.yml
+++ b/.github/workflows/build-and-push-nr-server-image.yml
@@ -1,4 +1,4 @@
-name: Build (and push) server image 
+name: Build (and push) nr-server image
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
