--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -29,6 +29,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
