--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup pnpm
+      - name: Restore pnpm installation
+        id: pnpm-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/setup-pnpm
+          key: pnpm-bin-${{ runner.os }}-${{ runner.arch }}
+
+      - name: Add cached pnpm to PATH
+        if: steps.pnpm-cache.outputs.cache-hit == 'true'
+        run: |
+          PNPM_HOME=~/.cache/setup-pnpm/node_modules/.bin
+          echo "$PNPM_HOME" >> "$GITHUB_PATH"
+          echo "PNPM_HOME=$PNPM_HOME" >> "$GITHUB_ENV"
+
+      - name: Setup pnpm (cache miss)
+        if: steps.pnpm-cache.outputs.cache-hit != 'true'
         uses: pnpm/action-setup@v4
+        with:
+          dest: ~/.cache/setup-pnpm
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
