--- a/nr-relay-to-rabbit/deno.json
+++ b/nr-relay-to-rabbit/deno.json
@@ -5,6 +5,7 @@
   },
   "imports": {
     "@trustroots/nr-common": "../nr-common/mod.ts",
+    "@trustroots/amqp": "../packages/amqp/mod.ts",
     "@nashaddams/amqp": "jsr:@nashaddams/amqp@1.1.0",
     "zod": "npm:zod@^3.25.76"
   }
