fix: set up deno workspaces

--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -4,8 +4,6 @@
     "cache": "deno cache --lock deno.lock deps.ts",
   },
   "imports": {
-    "zod": "npm:zod@^3.23.8",
-    "@trustroots/nr-common": "../nr-common/mod.ts",
-    "@trustroots/amqp": "../packages/amqp/mod.ts"
+    "zod": "npm:zod@^3.23.8"
   },
 }
